# ChangeLog for net-mail/notmuch
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Aug 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
  metadata.xml:
  Get rid of Ruby bindings and Vim UI. If someone would like to have Ruby
  and/or Vim UI, correct patch is welcome.

  08 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Handling installation of new Notmuch UI for Vim.

  08 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Cosmetic changes.

  07 Jul 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Ruby bindings. Fixes bug #475624. Thanks and credits to Franz Fellner
  <alpine.art.de@googlemail.com> and Jeroen Roovers <jer@gentoo.org> and me,
  too. :-)

  20 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.15::gentoo.

  20 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org>
  +files/60notmuch-pick-gentoo.el, notmuch-9999.ebuild, metadata.xml:
  Synced with net-mail/notmuch-0.15::gentoo.

  18 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Require libxml2 flag for app-editors/emacs.

  18 Jan 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.14-r1::gentoo.

  19 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.13::gentoo, again.

  16 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
  metadata.xml:
  Synced with net-mail/notmuch-0.13::gentoo.

  10 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Enforce build with GMime 2.6.

  10 May 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Synced with net-mail/notmuch-0.12::gentoo.

  20 Mar 2012; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
  Renamed Python bindings README to README-python, because it used to overwrite