@@ -2,6 +2,9 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild:
+  Bump EAPI to 5 and use distutils-r1 (for bindings) instead of the old one.
+
   03 Aug 2013; Amadeusz Żołnowski <aidecoe@gentoo.org> notmuch-9999.ebuild,
   metadata.xml:
   Get rid of Ruby bindings and Vim UI. If someone would like to have Ruby
